--- a/colgate.html
+++ b/colgate.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>landing-generator</title>
-    <script defer="defer" src="/chunk-vendors/js/chunk-vendors.js"></script>
-    <script defer="defer" src="/colgate/js/colgate.js"></script>
-    <link href="/colgate/css/colgate.css" rel="stylesheet" />
+    <script defer="defer" src="./chunk-vendors/js/chunk-vendors.js"></script>
+    <script defer="defer" src="./colgate/js/colgate.js"></script>
+    <link href="./colgate/css/colgate.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
