--- a/colgate.html
+++ b/colgate.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>landing-generator</title>
-    <script defer="defer" src="./chunk-vendors/js/chunk-vendors.js"></script>
-    <script defer="defer" src="./colgate/js/colgate.js"></script>
-    <link href="./colgate/css/colgate.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript
-      ><strong
-        >We're sorry but landing-generator doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
-      ></noscript
-    >
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"/><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="icon" href="/favicon.ico"/><title>landing-generator</title><script defer="defer" src="/js/chunk-vendors.b15fd80f.js"></script><script defer="defer" src="/js/colgate.b3cf4f82.js"></script><link href="/css/colgate.7648bbfd.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but landing-generator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
